--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.19.5",
     "date-fns": "^2.28.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
@@ -21,7 +22,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix --color",
-    "format": "prettier --write src/**/*.js",
+    "format": "prettier --write .",
     "prepare": "husky install"
   },
   "eslintConfig": {
@@ -52,6 +53,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "husky": "^7.0.4",
+    "less": "^4.1.2",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
     "sass": "^1.50.0"
