--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "react": "^18.0.0",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
