--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "env": {
-    "browser": true,
+    "node": true,
+    "browser":true,
     "es2021": true
   },
   "ignorePatterns": ["node_modules", "dist", "build"],
